--- a/src/app/modules/admin/components/header/header.component.scss
+++ b/src/app/modules/admin/components/header/header.component.scss
@@ -30,7 +30,7 @@ div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
 div.container
 {
     font-family: Raleway;
-    margin: 0 auto;
+    margin-left: 150px;
     padding: 0em 3em;
     text-align: center;
 }
